
2016-11-07  Jim Rinn <jimrinn1@gmail.com>

	* parser.y (lock_mode): OR-ing SELECT settings into file->lock_mode as they
	  would override COB_LOCK_MULTIPLE (set in _lock_with) otherwise

2016-11-07  Ron Norman <rjn@inglenet.com>

	* typeck.c cobc.c flag.def config.def: added code for
	  'move-ibm' option which does MOVE same as IBM MVC instruction 

2016-10-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (cb_list_system): simplified, removed hard-coded values

2016-10-13  Ron Norman <rjn@inglenet.com>

	* typeck.c cobc.c flag.def config.def: added code for
	  'arithmetic-osvs' option which computes intermediate
	  results similar to IBM OSVS & MVS

2016-09-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c: fix bug #316 static linking with stdcall was broken
	  * new struct static_call_list (including convention and 
	    return-type), removing return-type from call_list
	  * store call-convention and generate __stdcall modifiers if requested
	* codegen.c (call_list_reverse, static_call_list_reverse): added for
	  keeping the generated variables in the same order it has in COBOL,
	  called in (codegen)

2016-09-21  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: added RETRY and ADVANCING ON LOCK as pending features.
	* parser.y, reserved.c: made FOREVER context-sensitive.
	* reserved.c (default_reserved_words): corrected year of standard from
	  2008 to 2014.
	* reserved.c (lookup_reserved_word): changed to allow context-sensitive
	  words to be activated by different words.

2016-09-19  Ron Norman <rjn@inglenet.com>

	* codgen.c, tree.c, tree.h added code to optimize handling of 
	  'decimal constants' in expressions

2016-06-30  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l (is_condition_directive_clause): fixed bug #263 where >>IF's
	  where not detected inside false >>IF's.

2016-06-25  Edward Hart <edward.dan.hart@gmail.com>

	* pplex.l: fixed bug #248, where any directive was evaluated inside the