@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2003-2012, 2014-2015 Free Software Foundation, Inc.
+   Copyright (C) 2003-2012, 2014-2017 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch
 
    This file is part of GnuCOBOL.
@@ -21,10 +21,14 @@
 
 /* Compiler flag defines */
 
-/* Normal binary flags */
+/* Normal binary flags (standard: off) */
 /* CB_FLAG    (var, help switch, name, help) */
 
-/* Flags with required parameter */
+/* Normal binary flags (standard: on) */
+/* CB_FLAG_ON (var, help switch, name, help) */
+
+
+/* Flags with required parameter (standard: default)*/
 /* CB_FLAG_RQ (var, help switch, name, default, getopt return, help) */
 
 /* Flags with required parameter and no associated variable */
